# OOProject

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  coverage.html  coverage.include_Admin.h.html  coverage.include_Interface.h.html  coverage.include_Participant.h.html  coverage.include_Post.h.html  coverage.include_User.h.html  coverage.main.cpp.html  coverage.rlutil_rlutil.h.html  coverage.src_Admin.cpp.html  coverage.src_Interface.cpp.html  coverage.src_Participant.cpp.html  coverage.src_Post.cpp.html  coverage.src_User.cpp.html  main.cpp
.github/workflows/: workflow.yml
appFiles/: Doxyfile  admins.txt  adminsLogin.txt  channels.txt  users.txt  usersLogin.txt
appFiles/users-admins/: userr.txt
autocomplete/: imports.bat  main.py  run.bat
doc/html/: _admin_8h_source.html  _guest_8h_source.html  _interface_8h_source.html  _participant_8h_source.html  _post_8h_source.html  _user_8h_source.html  annotated.html  annotated_dup.js  class_admin-members.html  class_admin.html  class_admin.js  class_guest-members.html  class_guest.html  class_interface-members.html  class_interface.html  class_interface.js  class_participant-members.html  class_participant.html  class_participant.js  class_post-members.html  class_post.html  class_post.js  class_user-members.html  class_user.html  (+29 more)
include/: Admin.h  Channel.h  Discussion.h  Guest.h  Interface.h  LoginWrapper.h  Participant.h  Poll.h  Post.h  Question.h  User.h
src/: Admin.cpp  Channel.cpp  Discussion.cpp  Guest.cpp  Interface.cpp  LoginWrapper.cpp  Participant.cpp  Poll.cpp  Post.cpp  Question.cpp  User.cpp
(+15 files in other folders)
